[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = 'llm-cache-policy-check'
version = "0.1.0"
description = 'Check LLM response cache policies for privacy, TTL, and key-scope gaps.'
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mertefe Kurt" }]
keywords = ["ai-engineering", "automation", "developer-tools", "cli"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
llm-cache-policy-check = "llm_cache_policy_check.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "RUF"]
